CHANGES IN FLTK 1.1.0rc5

	- The newButton and previewButton widgets are now public
	  members of the Fl_File_Chooser class.  This allows
	  developers to disable or hide the "new directory" and
	  "preview" buttons as desired.
	- Added new visible focus flag bit and methods to
	  Fl_Widget, so it is now possible to do both global and
	  per-widget keyboard focus control.
	- Removed extra 3 pixel border around input fields.
	- No longer quote characters from 0x80 to 0x9f in input
	  fields.
	- Improved speed of Fl_Browser_::display() method with
	  large lists (patch from Stephen Davies.)
	- Fl_Help_View didn't properly handle NULL from the link
	  callback (the original filename/directory name were
	  not preserved...)
	- Fl_Help_View didn't use the boxtype border values when
	  clipping the page that was displayed.
	- Added first steps to CodeWarrior/OS_X support (see
	  fltk-1.1.x/CodeWarrior/OS_X.sit)
	- Cleaned up the WIN32 export definitions for some of
	  the widget classes.
	- Fixed a filename completion bug when changing
	  directories.
	- Fl_File_Chooser::value() would return directories with
	  a trailing slash, but would not accept a directory
	  without a trailing slash.
	- When installing shared libraries, FLUID is now linked
	  against the shared libraries.
	- MacOS: missing compile rule for .dylib files.
	- Fl_Group::current(), Fl_Group::begin(), and
	  Fl_Group::end() are no longer inlined so that they are
	  properly exported in DLLs under WIN32.  Similar
	  changes for all static inline methods in other
	  classes.
	- MacOS: support for Mac system menu (Fl_Sys_Menu_Bar)
	- MacOS: wait(0) would not handle all pending events
	- Added new makeinclude file for MingW using GCC 3.1.x.
	- Fl_Choice::value(n) didn't range check "n".
	- The MingW and OS/2 makeinclude files didn't have the
	  new fltk_images library definitions.
	- Fl_Text_Editor didn't scroll the text in the widget
	  when dragging text.
	- Config header file changes for Borland C++.