@@ -41,6 +41,13 @@ setting <TT>type()</TT> to one of the following values:</P>
 #define FL_INT_INPUT		2
 #define FL_MULTILINE_INPUT	4
 #define FL_SECRET_INPUT		5
+#define FL_INPUT_TYPE		7
+#define FL_INPUT_READONLY	8
+#define FL_NORMAL_OUTPUT	(FL_NORMAL_INPUT | FL_INPUT_READONLY)
+#define FL_MULTILINE_OUTPUT	(FL_MULTILINE_INPUT | FL_INPUT_READONLY)
+#define FL_INPUT_WRAP		16
+#define FL_MULTILINE_INPUT_WRAP	(FL_MULTILINE_INPUT | FL_INPUT_WRAP)
+#define FL_MULTILINE_OUTPUT_WRAP (FL_MULTILINE_INPUT | FL_INPUT_READONLY | FL_INPUT_WRAP)
 </PRE></UL>
 
 <H3>Methods</H3>
@@ -79,7 +86,7 @@ setting <TT>type()</TT> to one of the following values:</P>
 <UL>
 <LI><A href="#Fl_Input_.undo">undo</A></LI>
 <LI><A href="#Fl_Input_.up_down_position">up_down_position</A></LI>
-<LI><A href="#Fl_Input_.wordboundary">wordboundary</A></LI>
+<LI><A href="#Fl_Input_.wrap">wrap</A></LI>
 </UL>
 </TD></TR>
 </TABLE>
@@ -242,6 +249,12 @@ information to the clipboard. This is used to make ^K work.
 <BR>void Fl_Input_::readonly(int)</A></H4>
 
 <P>Gets or sets the read-only state of the input field.
+
+<H4><A name="Fl_Input_.wrap">int Fl_Input_::wrap() const
+<BR>void Fl_Input_::wrap(int)</A></H4>
+
+<P>Gets or sets the word wrapping state of the input field. Word
+wrap is only functional with multi-line input fields.
 
 </BODY>
 </HTML>
